--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* -----------------------------  -----------------------------  Zmienne z kolorami */
+/* -----------------------------   Zmienne z kolorami */
 :root {
 	--mainBgCr: #212121;
 	--mainTextCr: #cfcfcf;
@@ -54,40 +54,30 @@ button {
 	align-items: center;
 }
 .menu li {
-	margin: 20px;
-}
-
-/* -----------------------------   Stylizowanie linkow */
-.menu a:link,
-.menu a:active,
-.menu a:visited {
-	text-decoration: none;
-	box-shadow: none;
-	color: var(--mainTextCr);
+	margin: 10px;
 	padding: 10px;
 	text-transform: uppercase;
 }
-.hangman a:link,
-.hangman a:active,
-.hangman a:visited {
+
+/* -----------------------------   Stylizowanie linkow */
+a:link,
+a:active,
+a:visited {
 	text-decoration: none;
 	box-shadow: none;
-	color: var(--mainTextCr);
-}
-.contactBtns a:link,
-.contactBtns a:active,
-.contactBtns a:visited {
-	text-decoration: none;
 	color: var(--mainTextCr);
 }
 .menu a:hover {
 	text-shadow: var(--shadow);
 }
-
 .btn:hover,
 button:hover {
 	box-shadow: var(--shadow);
 }
+.certs:hover {
+	box-shadow: var(--shadow);
+}
+
 /* -----------------------------  Stylowanie aboutMe */
 .content {
 	padding: 1px 0;
@@ -99,7 +89,7 @@ h1 {
 }
 .site {
 	text-align: center;
-	margin: 12vw auto;
+	margin: 150px auto;
 	max-width: 1200px;
 }
 .aboutGrid {
@@ -156,10 +146,8 @@ h1 {
 /* -----------------------------  Stylowanie projects */
 .projects {
 	padding: 1px 0;
-	text-align: center;
 }
 .projectsContent {
-	max-width: 1200px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -270,7 +258,28 @@ h1 {
 	grid-row: 3/4;
 	grid-column: 1/2;
 }
-
+/* -----------------------------  Stylowanie Certificates */
+.certContent {
+	max-width: 700px;
+	margin: auto;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-content: space-around;
+	justify-content: space-around;
+	align-items: center;
+}
+.certs {
+	margin: 10px;
+	border: solid 5px var(--bordersCr);
+	border-radius: 5px;
+	padding: 5px;
+}
+.certs img {
+	width: 300px;
+	height: 220px;
+	vertical-align: middle;
+}
 
 /* 
 ------------------------------------------  MEDIA 
@@ -283,12 +292,6 @@ h1 {
 	.menu ul {
 		width: clamp(200px, 100%, 768px);
 		flex-direction: column;
-	}
-	.menu li {
-		margin: 20px;
-	}
-	.container {
-		max-width: 100%;
 	}
 	.site {
 		margin: 210px auto 10vw;
@@ -308,7 +311,7 @@ h1 {
 		grid-column: 1/2;
 		padding: 2%;
 	}
-	
+
 	[data-id='pHi'] {
 		grid-row: 3/4;
 		grid-column: 1/2;
@@ -326,5 +329,14 @@ h1 {
 	.contactBtns {
 		margin: auto 2%;
 	}
-	
+	.certContent {
+		max-width: 450px;
+	}
+	.certs {
+		width: 200px;
+	}
+	.certs img {
+		width: 100%;
+		height: 100%;
+	}
 }
