--- a/index.css
+++ b/index.css
@@ -35,7 +35,21 @@ button {
 	border: none;
 	cursor: pointer;
 }
-
+.btn:hover,
+button:hover {
+	box-shadow: var(--shadow);
+}
+/* -----------------------------   Stylowanie linkow */
+a:link,
+a:active,
+a:visited {
+	text-decoration: none;
+	box-shadow: none;
+	color: var(--mainTextCr);
+}
+a:hover {
+	text-shadow: var(--shadow);
+}
 /* -----------------------------   Stylowanie nawigacji */
 .menu {
 	width: clamp(768px, 100%, 100%);
@@ -47,6 +61,9 @@ button {
 	font-size: clamp(14px, 2vw, 20px);
 	background-color: var(--bordersCr);
 	flex-wrap: nowrap;
+}
+.menu a:hover {
+	text-shadow: var(--shadow);
 }
 .menu ul {
 	width: clamp(768px, 100%, 100%);
@@ -61,27 +78,6 @@ button {
 	padding: calc(20px + 1vw) 3vw;
 	text-transform: uppercase;
 }
-
-/* -----------------------------   Stylowanie linkow */
-a:link,
-a:active,
-a:visited {
-	text-decoration: none;
-	box-shadow: none;
-	color: var(--mainTextCr);
-}
-.menu a:hover {
-	text-shadow: var(--shadow);
-}
-.btn:hover,
-button:hover {
-	box-shadow: var(--shadow);
-}
-.certs:hover {
-	box-shadow: var(--shadow);
-	cursor: pointer;
-}
-
 /* -----------------------------  Stylowanie aboutMe */
 .content {
 	padding: 1px;
@@ -151,7 +147,7 @@ button:hover {
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-content: space-around;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: stretch;
 }
 
@@ -174,7 +170,28 @@ button:hover {
 	grid-row: 1/2;
 	grid-column: 1/3;
 }
+/* -----------------------------  Stylowanie jabi-pl */
+.jabi {
+	grid-template-rows: 15% 1fr 30%;
+	grid-template-columns: 1fr;
+}
+p.header a {
+	font-weight: bold;
+	font-size: larger;
+	font-style: italic;
+}
+.jabiIcon {
+	grid-row: 2/3;
+	grid-column: 1/2;
+	max-width: 80%;
+}
+.jabiBtn {
+	grid-row: 3/4;
+	grid-column: 1/2;
+	min-width: 50%;
+}
 /* -----------------------------  Stylowanie hello world */
+
 .hello {
 	grid-template-rows: 15% 1fr 30%;
 	grid-template-columns: 1fr;
@@ -202,6 +219,7 @@ button:hover {
 .wBtn {
 	grid-row: 2/3;
 	grid-column: 2/3;
+	font-size: 14px;
 }
 .dataWeatherBox {
 	grid-row: 3/4;
@@ -257,10 +275,6 @@ button:hover {
 	grid-template-columns: 1fr;
 	gap: 5px;
 }
-.headerH {
-	grid-row: 1/2;
-	grid-column: 1/2;
-}
 .gameImg {
 	grid-row: 2/3;
 	grid-column: 1/2;
@@ -294,6 +308,10 @@ button:hover {
 	border: solid 5px var(--bordersCr);
 	border-radius: 5px;
 	padding: 5px;
+}
+.certs:hover {
+	box-shadow: var(--shadow);
+	cursor: pointer;
 }
 .certs img {
 	width: 300px;
