--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ a:hover {
 	font-size: clamp(14px, 2vw, 20px);
 	background-color: var(--bordersCr);
 	flex-wrap: nowrap;
+	z-index: 99;
 }
 .menu a:hover {
 	text-shadow: var(--shadow);
@@ -89,8 +90,8 @@ a:hover {
 }
 .aboutGrid {
 	display: grid;
-	grid-template-rows: 1fr 5fr 1fr;
-	grid-template-columns: 1fr 1.8fr;
+	grid-template-rows: 0.5fr 2fr 0.5fr;
+	grid-template-columns: 0.6fr 1.4fr;
 	gap: 3%;
 	align-items: center;
 	justify-items: center;
@@ -240,9 +241,6 @@ p.header a {
 	padding: 0 5px;
 	text-align: left;
 }
-.weatherIcon {
-	max-width: 60%;
-}
 .wDesc {
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -319,34 +317,62 @@ p.header a {
 	vertical-align: middle;
 }
 .popup {
-	width: clamp(40vw, 60vw, 70vw);
+	width: clamp(40vw, 60vw, 80vw);
 	position: fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	z-index: 100;
 }
 .popup img {
-	max-width: 100%;
+	width: clamp(40vw, 60vw, 68vw);
 	border: solid 5px var(--bordersCr);
 	border-radius: 5px;
 	padding: 5px;
 }
-.closeBtn {
+.popup p {
 	position: fixed;
 	right: 0;
-	transform: translate(40%, -40%);
-	border-radius: 50%;
-	transition: opacity 4s ease-in;
+	top: 0;
+	transform: translate(-12px, -120%);
+	color: var(--bordersCr);
 }
-
-.fa-times-circle {
+.closeBtn,
+.prevBtn,
+.nextBtn {
+	position: fixed;
+	transition: opacity 4s ease-in;
+	background-color: transparent;
+	color: var(--bordersCr);
 	font-size: xx-large;
 }
-
+.closeBtn:hover,
+.prevBtn:hover,
+.nextBtn:hover {
+	box-shadow: initial;
+	text-shadow: 0 0 15px var(--bordersCr);
+}
+.closeBtn {
+	right: 0;
+	top: 0;
+	transform: translate(80%, -80%);
+}
+.prevBtn {
+	left: 0;
+	transform: translate(-100%, 0);
+	height: 100%;
+	padding-right: 1vw;
+}
+.nextBtn {
+	right: 0;
+	transform: translate(100%, 0);
+	height: 100%;
+	padding-left: 1vw;
+}
 /* 
 ------------------------------------------  MEDIA 
 */
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
 	.menu {
 		width: clamp(200px, 100%, 768px);
 	}
@@ -354,10 +380,10 @@ p.header a {
 		flex-direction: column;
 	}
 	.menu li {
-		padding: 20px 3vw;
+		padding: 10px 3vw;
 	}
 	.site {
-		margin: 210px auto 10vw;
+		margin: 130px auto 10vw;
 	}
 	.aboutGrid {
 		display: grid;
@@ -373,6 +399,9 @@ p.header a {
 		grid-row: 1 / 2;
 		grid-column: 1/2;
 		padding: 2%;
+		width: auto;
+		max-width: 50%;
+		max-height: 100%;
 	}
 
 	[data-id='pHi'] {
@@ -392,6 +421,9 @@ p.header a {
 	.contactBtns {
 		margin: auto 2%;
 	}
+	.apis {
+		height: clamp(350px, 90vh, 400px);
+	}
 	.certContent {
 		max-width: 450px;
 	}
@@ -401,5 +433,146 @@ p.header a {
 	.certs img {
 		width: 100%;
 		height: 100%;
+	}
+	.popup {
+		width: 80%;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, 0);
+	}
+	.popup img {
+		width: 100%;
+	}
+	.popup p {
+		left: 0;
+		top: 0;
+		right: auto;
+		transform: translate(10%, -120%);
+	}
+	.closeBtn {
+		right: 0;
+		top: 0;
+		transform: translate(-50%, -100%);
+		padding: 0;
+	}
+	.prevBtn {
+		left: 0;
+		bottom: 0;
+		transform: translate(100%, 100%);
+		height: auto;
+		padding: 0;
+	}
+	.nextBtn {
+		right: 0;
+		bottom: 0;
+		transform: translate(-100%, 100%);
+		height: auto;
+		padding: 0;
+	}
+}
+@media (max-width: 1000px) and (orientation: landscape) {
+	.menu {
+		width: 100%;
+	}
+	.site {
+		margin: 80px auto;
+		max-width: 100vw;
+	}
+	.contact {
+		max-width: 100%;
+	}
+	.contactBtns i {
+		width: auto;
+		margin: auto;
+		padding: 0 5px;
+	}
+	.certContent {
+		max-width: 100vw;
+	}
+	.certs img {
+		width: initial;
+		height: initial;
+		max-width: 40vw;
+	}
+	.popup {
+		top: auto;
+		bottom: 0;
+		width: 100%;
+		height: 80%;
+		transform: translate(-50%, 0);
+	}
+	.popup img {
+		width: auto;
+		max-height: calc(100vh - 90px);
+		max-width: 60vw;
+		position: fixed;
+		top: auto;
+		right: 0;
+		bottom: 0;
+		left: auto;
+	}
+	.popup p {
+		top: auto;
+		right: auto;
+		bottom: 0;
+		left: 25%;
+		transform: translate(-50%, -1vh);
+	}
+	.closeBtn {
+		top: auto;
+		right: auto;
+		bottom: 25%;
+		left: 25%;
+		transform: translate(-50%, -50%);
+		padding: 0;
+	}
+	.prevBtn {
+		top: auto;
+		right: auto;
+		bottom: 25%;
+		left: 13%;
+		transform: translate(-50%, -50%);
+		height: auto;
+		padding: 0;
+	}
+	.nextBtn {
+		top: auto;
+		right: auto;
+		bottom: 25%;
+		left: 38%;
+		transform: translate(-50%, -50%);
+		height: auto;
+		padding: 0;
+	}
+	.projects {
+		max-width: 100vw;
+	}
+	.projectsContent {
+		justify-content: center;
+	}
+	.apis {
+		display: flex;
+		width: 80%;
+		height: 80%;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-content: space-around;
+		justify-content: space-evenly;
+	}
+	.apis img {
+		width: initial;
+		height: initial;
+		max-width: 30%;
+	}
+	.weatherApi .weatherIcon {
+		max-width: 100px;
+	}
+	.hangmanProject a {
+		min-width: auto;
+		width: 49%;
+		margin: auto;
+	}
+	.disneyDes{
+		width:90%;
 	}
 }
