--- a/projects/hangman/hangman.css
+++ b/projects/hangman/hangman.css
@@ -86,12 +86,12 @@ img {
 }
 .backBtn,
 .gitHangmanBtn {
-	margin: 0 0.5vw
-}
-.hide {
-	display: none;
+	margin: 0 0.5vw;
 }
 @media (max-width: 768px) {
+	h1 {
+		font-size: larger;
+	}
 	.hangGrid {
 		display: grid;
 		justify-content: center;
@@ -108,6 +108,7 @@ img {
 	.password {
 		grid-row: 1/2;
 		grid-column: 1/2;
+		margin: 10px auto;
 	}
 	img {
 		grid-row: 2/3;
@@ -135,4 +136,46 @@ img {
 		grid-column: 1/2;
 		margin: 5px;
 	}
+}
+@media (max-width: 1000px) and (orientation: landscape) {
+	.hangGrid {
+		grid-template-rows: repeat(3, auto);
+		grid-template-columns: 1fr 1fr;
+		min-height: initial;
+	}
+	.password {
+		grid-row: 1/2;
+		grid-column: 1/-1;
+	}
+	.alphabet {
+		grid-row: 2/3;
+		grid-column: 2/-1;
+		display: grid;
+		align-content: center;
+		justify-content: center;
+		align-items: center;
+		justify-items: center;
+		grid-template-rows: auto;
+		grid-template-columns: repeat(7, 1fr);
+		max-width: 90%;
+	}
+	.letter {
+		width: 20px;
+		height: 20px;
+		font-size: small;
+		border-width: thin;
+	}
+	.result {
+		grid-row: 3/4;
+		grid-column: 1/2;
+		font-size: small;
+	}
+	.reset {
+		grid-row: 3/4;
+		grid-column: 2/-1;
+		font-size: small;
+	}
+}
+.hide {
+	display: none;
 }
