--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,58 @@
-/* -----------------------------   Zmienne z kolorami */
+@import './cookies.css';
 :root {
 	--mainBgCr: #1a1a1a;
 	--mainTextCr: #cfcfcf;
 	--headersCr: #5b7200;
 	--bordersCr: #ab9400d0;
-	--shadow: 1px 1px 2px black, 0 0 1em gold, 0 0 0.2em gold;
+	--hover: 1px 1px 2px black, 0 0 1em gold, 0 0 0.2em gold;
 }
-/* -----------------------------   Resetowanie domyślnych styli */
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
-/* -----------------------------   Globalne style */
 body {
 	font-family: Arial, sans-serif;
-	font-size: 16px;
-	line-height: 1.5;
+	font-size: 1.5vw;
 	color: var(--mainTextCr);
 	background-color: var(--mainBgCr);
+	position: absolute;
+	width: 100vw;
+	min-height: 100vh;
+}
+.content {
+	background-color: var(--layerBgCr);
+	position: absolute;
+	width: 100vw;
+	min-height: 100vh;
+}
+/* -----------------------------   Stylowanie nawigacji */
+.menu {
+	width: 100vw;
+	display: flex;
+	position: sticky;
+	font-size: 1.5em;
+	background-color: var(--bordersCr);
+	z-index: 99;
+}
+.menu a:hover {
+	text-shadow: var(--hover);
+}
+.menu ul {
+	width: 100vw;
+	display: flex;
+	list-style: none;
+	place-content: center;
+}
+.menu li {
+	padding: 2vh 2vw;
+	text-transform: uppercase;
 }
 h1 {
-	font-size: clamp(30px, 3vw, 40px);
+	font-size: 3em;
 	color: var(--headersCr);
-	margin-bottom: clamp(3%, 5%, 7%);
+	margin: 3vh;
+	text-align: center;
 }
 .btn,
 button {
@@ -37,9 +66,9 @@ button {
 }
 .btn:hover,
 button:hover {
-	box-shadow: var(--shadow);
+	text-shadow: var(--hover);
+	box-shadow: none;
 }
-/* -----------------------------   Stylowanie linkow */
 a:link,
 a:active,
 a:visited {
@@ -48,531 +77,24 @@ a:visited {
 	color: var(--mainTextCr);
 }
 a:hover {
-	text-shadow: var(--shadow);
-}
-/* -----------------------------   Stylowanie nawigacji */
-.menu {
-	width: clamp(768px, 100%, 100%);
-	display: flex;
-	position: fixed;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	font-size: clamp(14px, 2vw, 20px);
-	background-color: var(--bordersCr);
-	flex-wrap: nowrap;
-	z-index: 99;
-}
-.menu a:hover {
-	text-shadow: var(--shadow);
-}
-.menu ul {
-	width: clamp(768px, 100%, 100%);
-	display: flex;
-	list-style: none;
-	flex-wrap: nowrap;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-}
-.menu li {
-	padding: calc(20px + 1vw) 3vw;
-	text-transform: uppercase;
-}
-/* -----------------------------  Stylowanie aboutMe */
-.content {
-	padding: 1px;
-}
-.site {
-	text-align: center;
-	margin: 150px auto;
-	max-width: 1200px;
-}
-.aboutGrid {
-	display: grid;
-	grid-template-rows: 0.5fr 2fr 0.5fr;
-	grid-template-columns: 0.6fr 1.4fr;
-	gap: 3%;
-	align-items: center;
-	justify-items: center;
-	align-content: center;
-	justify-content: center;
-}
-.aboutGrid img {
-	grid-row: 1 / span 2;
-	grid-column: 1/2;
-	margin: auto;
-	width: clamp(100px, 30vw, 300px);
-	border: 5px solid var(--bordersCr);
-	padding: 5%;
+	color: whitesmoke;
 }
 
-[data-id='pHi'] {
-	grid-row: 1/2;
-	grid-column: 2/3;
-	letter-spacing: 0.2rem;
-	font-size: clamp(14px, 2.2vw, 24px);
-}
-.aboutGrid p:nth-child(3) {
-	grid-row: 2/4;
-	grid-column: 2/3;
-	display: flex;
-	text-align: center;
-	white-space: normal;
-	font-size: clamp(14px, 2vw, 22px);
-	line-height: 1.8;
-	padding: 0 1%;
-}
-.contact {
-	grid-row: 3/4;
-	grid-column: 1/2;
-	width: clamp(100px, 30vw, 300px);
-}
-.contactBtns {
-	display: inline-block;
-	text-decoration: none;
-	margin: auto 2%;
-}
-.fa-envelope,
-.fa-linkedin,
-.fa-github {
-	font-size: clamp(14px, 2vw, 25px);
-	width: clamp(40px, 2vw, 100px);
-}
-/* -----------------------------  Stylowanie projects */
-.projects {
-	padding: 1px 0;
-}
-.projectsContent {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-content: space-around;
-	justify-content: space-between;
-	align-items: stretch;
-}
+@media (min-width: 1200px){
+	body {
+		width: 1200px;
+		font-size: 20px;
+		margin: 0 auto;
+		position: unset;
 
-.apis {
-	width: clamp(300px, 100vw, 30%);
-	height: clamp(350px, 90vh, 450px);
-	font-size: clamp(0.3rem, 1rem, 16px);
-	margin: 15px;
-	border-radius: 20px;
-	padding: 2%;
-	box-shadow: inset 1px 1px 3px grey;
-	display: grid;
-	align-content: center;
-	justify-content: center;
-	justify-items: center;
-	align-items: center;
-	gap: 5px;
-}
-.header {
-	grid-row: 1/2;
-	grid-column: 1/3;
-}
-/* -----------------------------  Stylowanie jabi-pl */
-.jabi {
-	grid-template-rows: 15% 1fr 30%;
-	grid-template-columns: 1fr;
-}
-p.header a {
-	font-weight: bold;
-	font-size: larger;
-	font-style: italic;
-}
-.jabiIcon {
-	grid-row: 2/3;
-	grid-column: 1/2;
-	max-width: 80%;
-}
-.jabiBtn {
-	grid-row: 3/4;
-	grid-column: 1/2;
-	min-width: 50%;
-}
-/* -----------------------------  Stylowanie hello world */
-
-.hello {
-	grid-template-rows: 15% 1fr 30%;
-	grid-template-columns: 1fr;
-}
-.helloIcon {
-	grid-row: 2/3;
-	grid-column: 1/2;
-	max-width: 70%;
-}
-.helloBtn {
-	grid-row: 3/4;
-	grid-column: 1/2;
-	min-width: 50%;
-}
-/* -----------------------------  Stylowanie WeatherAPI */
-.weatherApi {
-	grid-template-rows: 15% 20% 65%;
-	grid-template-columns: 0.8fr 1.2fr;
-}
-.weatherIcon {
-	grid-row: 2/3;
-	grid-column: 1/2;
-	width: clamp(80px, 8vw, 100px);
-}
-.wBtn {
-	grid-row: 2/3;
-	grid-column: 2/3;
-	font-size: 14px;
-}
-.dataWeatherBox {
-	grid-row: 3/4;
-	grid-column: 1/3;
-	width: 100%;
-	height: 90%;
-	display: grid;
-	align-items: center;
-	grid-auto-flow: row;
-	grid-template-columns: 0.8fr 1.2fr;
-	grid-template-rows: repeat(auto-fit, minmax(20px, 1fr));
-	font-size: 1rem;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-.icon {
-	padding: 0 5px;
-	text-align: left;
-}
-.wDesc {
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-.cityName {
-	font-weight: bold;
-	font-size: larger;
-}
-/* -----------------------------  Stylowanie disney API */
-.disneyApi {
-	grid-template-rows: 60px minmax(100px, 160px) minmax(100px, 180px);
-	grid-template-columns: 1fr;
-}
-.image {
-	grid-row: 2/3;
-	grid-column: 1/2;
-	max-height: 100%;
-	object-fit: contain;
-}
-.disneyDes {
-	grid-row: 3/4;
-	grid-column: 1/2;
-	max-height: 100%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-/* -----------------------------  Stylowanie Hangman w podstronie projects */
-.hangmanProject {
-	grid-template-rows: 15% 1fr 15% 15%;
-	grid-template-columns: 1fr;
-	gap: 5px;
-}
-.gameImg {
-	grid-row: 2/3;
-	grid-column: 1/2;
-	width: 95%;
-}
-.gameBtn {
-	grid-row: 3/4;
-	grid-column: 1/2;
-	margin-bottom: -10px;
-	min-width: 50%;
-}
-.gameBtnGit {
-	grid-row: 4/5;
-	grid-column: 1/2;
-	margin-top: -10px;
-	min-width: 50%;
-}
-/* -----------------------------  Stylowanie Certificates */
-.certContent {
-	max-width: 700px;
-	margin: auto;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-content: space-around;
-	justify-content: space-around;
-	align-items: center;
-}
-.certs {
-	margin: 10px;
-	border: solid 5px var(--bordersCr);
-	border-radius: 5px;
-	padding: 5px;
-}
-.certs:hover {
-	box-shadow: var(--shadow);
-	cursor: pointer;
-}
-.certs img {
-	width: 300px;
-	height: 220px;
-	vertical-align: middle;
-}
-.popup {
-	width: clamp(40vw, 60vw, 80vw);
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 100;
-}
-.popup img {
-	width: clamp(40vw, 60vw, 68vw);
-	border: solid 5px var(--bordersCr);
-	border-radius: 5px;
-	padding: 5px;
-}
-.popup p {
-	position: fixed;
-	right: 0;
-	top: 0;
-	transform: translate(-12px, -120%);
-	color: var(--bordersCr);
-}
-.closeBtn,
-.prevBtn,
-.nextBtn {
-	position: fixed;
-	transition: opacity 4s ease-in;
-	background-color: transparent;
-	color: var(--bordersCr);
-	font-size: xx-large;
-}
-.closeBtn:hover,
-.prevBtn:hover,
-.nextBtn:hover {
-	box-shadow: initial;
-	text-shadow: 0 0 15px var(--bordersCr);
-}
-.closeBtn {
-	right: 0;
-	top: 0;
-	transform: translate(80%, -80%);
-}
-.prevBtn {
-	left: 0;
-	transform: translate(-100%, 0);
-	height: 100%;
-	padding-right: 1vw;
-}
-.nextBtn {
-	right: 0;
-	transform: translate(100%, 0);
-	height: 100%;
-	padding-left: 1vw;
-}
-/* 
-------------------------------------------  MEDIA 
-*/
-@media (max-width: 768px) and (orientation: portrait) {
+	}
+	.content {
+		width: 1200px;
+		font-size: 18px;
+		margin: 0 auto;
+		position: unset;
+	}
 	.menu {
-		width: clamp(200px, 100%, 768px);
-	}
-	.menu ul {
-		flex-direction: column;
-	}
-	.menu li {
-		padding: 10px 3vw;
-	}
-	.site {
-		margin: 130px auto 10vw;
-	}
-	.aboutGrid {
-		display: grid;
-		grid-template-rows: 0.8fr 0.3fr 0.2fr 0.8fr;
-		grid-template-columns: 1fr;
-		gap: 3%;
-		align-items: center;
-		justify-items: center;
-		align-content: center;
-		justify-content: center;
-	}
-	.aboutGrid img {
-		grid-row: 1 / 2;
-		grid-column: 1/2;
-		padding: 2%;
-		width: auto;
-		max-width: 50%;
-		max-height: 100%;
-	}
-
-	[data-id='pHi'] {
-		grid-row: 3/4;
-		grid-column: 1/2;
-	}
-	.aboutGrid p:nth-child(3) {
-		grid-row: 4/5;
-		grid-column: 1/2;
-		width: 90%;
-	}
-	.contact {
-		grid-row: 2/3;
-		grid-column: 1/2;
-		width: 90%;
-	}
-	.contactBtns {
-		margin: auto 2%;
-	}
-	.apis {
-		height: clamp(350px, 90vh, 400px);
-	}
-	.certContent {
-		max-width: 450px;
-	}
-	.certs {
-		width: 200px;
-	}
-	.certs img {
-		width: 100%;
-		height: 100%;
-	}
-	.popup {
-		width: 80%;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, 0);
-	}
-	.popup img {
-		width: 100%;
-	}
-	.popup p {
-		left: 0;
-		top: 0;
-		right: auto;
-		transform: translate(10%, -120%);
-	}
-	.closeBtn {
-		right: 0;
-		top: 0;
-		transform: translate(-50%, -100%);
-		padding: 0;
-	}
-	.prevBtn {
-		left: 0;
-		bottom: 0;
-		transform: translate(100%, 100%);
-		height: auto;
-		padding: 0;
-	}
-	.nextBtn {
-		right: 0;
-		bottom: 0;
-		transform: translate(-100%, 100%);
-		height: auto;
-		padding: 0;
-	}
-}
-@media (max-width: 1000px) and (orientation: landscape) {
-	.menu {
-		width: 100%;
-	}
-	.site {
-		margin: 80px auto;
-		max-width: 100vw;
-	}
-	.contact {
-		max-width: 100%;
-	}
-	.contactBtns i {
-		width: auto;
-		margin: auto;
-		padding: 0 5px;
-	}
-	.certContent {
-		max-width: 100vw;
-	}
-	.certs img {
-		width: initial;
-		height: initial;
-		max-width: 40vw;
-	}
-	.popup {
-		top: auto;
-		bottom: 0;
-		width: 100%;
-		height: 80%;
-		transform: translate(-50%, 0);
-	}
-	.popup img {
-		width: auto;
-		max-height: calc(100vh - 90px);
-		max-width: 60vw;
-		position: fixed;
-		top: auto;
-		right: 0;
-		bottom: 0;
-		left: auto;
-	}
-	.popup p {
-		top: auto;
-		right: auto;
-		bottom: 0;
-		left: 25%;
-		transform: translate(-50%, -1vh);
-	}
-	.closeBtn {
-		top: auto;
-		right: auto;
-		bottom: 25%;
-		left: 25%;
-		transform: translate(-50%, -50%);
-		padding: 0;
-	}
-	.prevBtn {
-		top: auto;
-		right: auto;
-		bottom: 25%;
-		left: 13%;
-		transform: translate(-50%, -50%);
-		height: auto;
-		padding: 0;
-	}
-	.nextBtn {
-		top: auto;
-		right: auto;
-		bottom: 25%;
-		left: 38%;
-		transform: translate(-50%, -50%);
-		height: auto;
-		padding: 0;
-	}
-	.projects {
-		max-width: 100vw;
-	}
-	.projectsContent {
-		justify-content: center;
-	}
-	.apis {
-		display: flex;
-		width: 80%;
-		height: 80%;
-		flex-direction: row;
-		flex-wrap: wrap;
-		align-content: space-around;
-		justify-content: space-evenly;
-	}
-	.apis img {
-		width: initial;
-		height: initial;
-		max-width: 30%;
-	}
-	.weatherApi .weatherIcon {
-		max-width: 100px;
-	}
-	.hangmanProject a {
-		min-width: auto;
-		width: 49%;
-		margin: auto;
-	}
-	.disneyDes{
-		width:90%;
+		width: unset;
 	}
 }
